[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "textileriskengine"
version = "0.0.1"
description = "data-driven analytics \u0026 risk-engine platform for cross-border textile trading."
authors = [
  { name = "Zhou" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=This project integrates economic data, logistics indexes, ML forecasting models and risk simulations to support data-driven decisions in textile export markets (Southeast Asia, West Africa, MENA)..0"


[tool.ruff]
line-length = 99
src = ["textileriskengine"]
include = ["pyproject.toml", "textileriskengine/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["textileriskengine"]
force-sort-within-sections = true

